force-app/main/default/objects/breg_DocuSign_Auth__mdt/breg_DocuSign_Auth__mdt.object-meta.xml
<CustomObject>
    <label>BREG DocuSign Auth</label>
    <pluralLabel>BREG DocuSign Auth</pluralLabel>
</CustomObject>