force-app/main/default/objects/breg_DocuSign_Auth__mdt/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <description>Callback URL from Auth Provider</description>
    <label>Callback URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>