force-app/main/default/objects/breg_DocuSign_Auth__mdt/fields/DocuSign_API_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_API_Account_Id__c</fullName>
    <description>DocuSign API Account ID</description>
    <label>DocuSign API Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>