force-app/main/default/objects/breg_DocuSign_Auth__mdt/fields/Is_Production__c.field-meta.xml
<CustomField>
    <fullName>Is_Production__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Production</label>
    <type>Checkbox</type>
</CustomField>